addBookButton spacing fix

--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ h3 {
  }
 
  nav {
-   justify-content: center;
+   justify-content: space-around;
  }
 
  .logo img {
@@ -331,9 +331,6 @@ h3 {
 
  nav button {
    font-size: 1em;
-   max-height: 30px;
-   max-width: 30px;
-   text-align: center;
  }
 
 .view-options {
